# helloFlask

./: Fichier de suivi du projet OOP2.md  README.md  pyproject.toml
hello_flask/: Dockerfile  app.py  dataset.txt  docker-compose.yml  hello_flask.py.save
hello_flask/templates/: about.html  form.html  index.html
