[tool.poetry]
name = "helloflask"
version = "0.1.0"
description = ""
authors = ["alexandraPenin <alexandra.cecile.penin@gmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
